codegen/tests/ui/main/missing-return.rs
#[shuttle_codegen::main]
async fn missing_return() {}
